diff pic for mob

--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
 
     <a class="whats-app" href="https://api.whatsapp.com/send/?phone=966505282955&text&type=phone_number&app_absent=0"
       target="_blank">
-      <i class="fa fa-whatsapp my-float"></i>
+      <i class="fa fa-whatsapp"></i>
     </a>
 
     <div class="container copyright text-center mt-4">
