--- a/en/index.html
+++ b/en/index.html
@@ -114,9 +114,9 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <div>
+      <!-- <div>
         <a href="#about" id="btn-get-started" class=""> <i class="fa fa-caret-down" style="font-size:20px"></i></a>
-      </div>
+      </div> -->
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
