--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a href="#hero" class="nav-link ">الرئيسية</a>
           </li>
           <li class="nav-item">
-            <a href="#about" class="nav-link ">عن الشركة</a>
+            <a href="https://www.watamglass.com/#about" class="nav-link ">عن الشركة</a>
           </li>
           <li class="nav-item">
             <a href="#branches" class="nav-link ">الفروع</a>
@@ -113,9 +113,9 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <div>
+      <!-- <div>
         <a href="#about" id="btn-get-started"> <i class="fa fa-caret-down" style="font-size:20px"></i></a>
-      </div>
+      </div> -->
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
