--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a href="#hero" class="nav-link ">الرئيسية</a>
           </li>
           <li class="nav-item">
-            <a href="https://www.watamglass.com/#about" class="nav-link ">عن الشركة</a>
+            <a href="#about" class="nav-link ">عن الشركة</a>
           </li>
           <li class="nav-item">
             <a href="#branches" class="nav-link ">الفروع</a>
