--- a/en/index.html
+++ b/en/index.html
@@ -147,7 +147,7 @@
               precise
               and impactful brand call: Watam with precision. </p>
 
-            <div class="row feature-list-wrapper">
+            <!-- <div class="row feature-list-wrapper">
               <div class="col-md-6">
                 <ul class="feature-list">
                   <li>
@@ -168,7 +168,7 @@
                   </li>
                 </ul>
               </div>
-            </div>
+            </div> -->
 
             <!--  -->
           </div>
