--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               فكان افتتاح أول مراكزنا في تاريخ 1/1/2022
             </p>
 
-            <div class="row feature-list-wrapper">
+            <!-- <div class="row feature-list-wrapper">
               <div class="col-md-6">
                 <ul class="feature-list">
                   <li>
@@ -167,7 +167,7 @@
                   </li>
                 </ul>
               </div>
-            </div>
+            </div> -->
 
             <!--  -->
           </div>
